--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.google.android.gms:play-services-vision:9.8.0'
 }
