--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login" />
-        <activity android:name=".welcome" />
-        <activity android:name=".ScanNumberPlate"></activity>
+        <activity android:name=".LoginU" />
+        <activity android:name=".welcomeU" />
+        <activity android:name=".ScanNumberPlate" />
+        <activity android:name=".LoginM"></activity>
     </application>
 
 </manifest>
