--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -29,5 +30,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.android.gms:play-services-vision:9.8.0'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.2'
+    //compile 'com.afollested.material-dialogs:commons:0.9.4.2'
     testCompile 'junit:junit:4.12'
 }
