--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".LoginU" />
         <activity android:name=".welcomeU" />
         <activity android:name=".ScanNumberPlate" />
-        <activity android:name=".LoginM"></activity>
+        <activity android:name=".LoginM" />
+        <activity android:name=".Toll"></activity>
     </application>
 
 </manifest>
